--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,22 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.ouedyan.gomodhelper
-pluginName = go-mod-helper
+pluginGroup = com.ouedyan.gomodhelper
+pluginName = Go Mod Helper
 pluginRepositoryUrl = https://github.com/ouedyan/go-mod-helper
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.1
+pluginVersion = 1.0.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 213
-pluginUntilBuild = 223.*
+#pluginSinceBuild = 213
+#pluginUntilBuild = 223.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
-platformVersion = 2021.3.3
+platformType = IU
+platformVersion = 223.7571.182
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = org.jetbrains.plugins.go:223.7571.182
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 7.6
