--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ pluginRepositoryUrl = https://github.com/ouedyan/go-mod-helper
 pluginVersion = 1.0.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-#pluginSinceBuild = 223.7571.182
-#pluginUntilBuild = 223.*
+pluginSinceBuild = 223.6160.11
+pluginUntilBuild =
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IU
